@@ -1,15 +1,0 @@
-﻿using System;
-
-namespace NHibernate.Envers.Configuration.Attributes
-{
-	//todo: remove this one?
-	[AttributeUsage(AttributeTargets.Property | AttributeTargets.Field)]
-	public class AuditOverridesAttribute:Attribute
-	{
-		/**
-		 * @return An array of {@link AuditOverride} values, to define the new auditing
-		 * behavior.
-		 */
-		public AuditOverrideAttribute[] value;
-	}
-}
